Added authentication via cookie and API key
